<resources>
    <string name="app_name">Neighbourlyy</string>
    <string name="save">Save</string>
    <string name="pet_name">Pet Name</string>
    <string name="important_details">Important details</string>
    <string name="breed">Breed</string>
    <string name="weight">Weight</string>
    <string name="available_from">Available from</string>
    <string name="available_to">Available to</string>
    <string name="logo">Logo</string>
    <string name="backarrow">backArrow</string>
    <string name="log_in">Log in</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="street">Street and number</string>
    <string name="city">City</string>
    <string name="postalCode">Postal Code</string>
    <string name="password">Password</string>
    <string name="line">line</string>
    <string name="or">or</string>
    <string name="welcome_to">Welcome to</string>
    <string name="neighbourlyy">Neighbourlyy</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="how_to_start">How to start</string>
    <string name="help_others">Help Others</string>
    <string name="your_pets">Your Pets</string>
    <string name="addbtn">Add</string>
    <string name="denyBtn">Deny permission</string>
    <string name="grantBtn">Grant permission</string>
    <string name="noEmptyString">Field cannot be empty!</string>
    <string name="invalidEmail">Invalid email address!</string>
    <string name="noEmptyField">Field cannot be empty!</string>
    <string name="invalidPassword">Invalid password! Password should contain 1 upper case letter, 1 lower case letter, special character(@#$%^+=) and 1 number.</string>
    <string name="helpBtn">Contact and help</string>
    <string name="toast">Provide all the information.</string>
    <string name="backButtonDescription">Back button</string>
    <string name="smsContent">Hello, %1$s my name is %2$s. I found you on Neighboutlyy and would like to help with your pet.</string>
    <string name="invalidPostalCode">Invalid postal code. Use polish one, for example (00–000)</string>
    <string name="coderFail">Unexpected error occurred. Please relaunch your app.</string>
    <string name="addressCodingFailed">Address is incorrect. Please check it and try one more time.</string>
    <string name="sendingEmailFailed">Your email does not exist. Please check it and try again.</string>
    <string name="deleteBtn">Delete</string>
    <string name="updateBtn">Update</string>
    <string name="setFrom">Set</string>
    <string name="setTo">Set</string>
    <string name="greeting">Hello %1$s</string>
    <string name="incorrect_time">Time set uncorrected. You can set time during one day.</string>
    <string name="incorrect_name">Name already exists, provide unique name</string>
    <string name="how_tostart">How to start?</string>
    <string name="how_to_start_desc">Hello! Thank you for downloading our application. \nDo you want someone to go on a walk with your pet? \nFirst, simply click back button.
    Next, in the main menu choose "YOUR PETS". After that, click "ADD" button, fill fields and do not forget to click "SAVE"!
        Finally, wait for a message from a volunteer and determine all details. \nWould you like to help someone instead?
    \nJust click back button and in the main menu choose "HELP OTHERS".  </string>
    <string name="confirm_changes">Confirm changes</string>
    <string name="revert_changes">Revert changes</string>
    <string name="new_e_mail">New E-mail</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="details">Details:</string>
    <string name="weightDisp">Weight:</string>
    <string name="breedDisp">Breed:</string>
    <string name="nameDisp">Name:</string>
    <string name="name">Name</string>
    <string name="detailsDisp">Details</string>
    <string name="_08_00">08:00</string>
    <string name="_15_00">15:00</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="weight_kg">Weight kg</string>
    <string name="kg">kg</string>
    <string name="addPet_toLongDesc">Description is to long. Should be up to 100 characters.</string>
</resources>